--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "Rodrigo Gualberto <itzdrigz@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^7.2.1"
+    "babel-eslint": "^7.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.10.3"
   }
 }
