--- a/package.json
+++ b/package.json
@@ -9,6 +9,23 @@
   "devDependencies": {
     "babel-eslint": "^7.2.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.10.3"
+    "eslint-plugin-react": "^6.10.3",
+    "jest": "^19.0.2",
+    "jest-cli": "^19.0.2"
+  },
+  "dependencies": {
+    "axios": "^0.16.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.3.3",
+    "es6-promise": "^4.1.0",
+    "exports-loader": "^0.6.4",
+    "lodash": "^4.17.4",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
+    "react-redux": "^5.0.3",
+    "react-test-renderer": "^15.5.3",
+    "redux": "^3.6.0",
+    "webpack": "^2.3.3"
   }
 }
