--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
   "repository": "https://github.com/rgualberto/redux-bp",
   "author": "Rodrigo Gualberto <itzdrigz@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack-dev-server",
+    "lint:js": "eslint src/ --ext .jsx"
+  },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
+    "eslint": "^3.19.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.10.3",
     "jest": "^19.0.2",
-    "jest-cli": "^19.0.2"
+    "jest-cli": "^19.0.2",
+    "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "axios": "^0.16.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.3.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "es6-promise": "^4.1.0",
     "exports-loader": "^0.6.4",
     "lodash": "^4.17.4",
