--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
+    "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.10.3",
     "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
