--- a/package.json
+++ b/package.json
@@ -11,34 +11,34 @@
     "lint:js": "eslint src/ --ext .jsx"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.10.3",
-    "jest": "^19.0.2",
-    "jest-cli": "^19.0.2",
-    "node-sass": "^4.5.2",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1",
-    "webpack-dev-server": "^2.4.2"
+    "babel-eslint": "7.2.2",
+    "css-loader": "0.28.0",
+    "eslint": "3.19.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-react": "6.10.3",
+    "jest": "19.0.2",
+    "jest-cli": "19.0.2",
+    "node-sass": "4.5.2",
+    "sass-loader": "6.0.3",
+    "style-loader": "0.16.1",
+    "webpack-dev-server": "2.4.2"
   },
   "dependencies": {
-    "axios": "^0.16.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.3.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "es6-promise": "^4.1.0",
-    "exports-loader": "^0.6.4",
-    "lodash": "^4.17.4",
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3",
-    "react-redux": "^5.0.3",
-    "react-test-renderer": "^15.5.3",
-    "redux": "^3.6.0",
-    "webpack": "^2.3.3"
+    "axios": "0.16.1",
+    "babel-core": "6.24.1",
+    "babel-loader": "6.4.1",
+    "babel-preset-env": "1.4.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
+    "es6-promise": "4.1.0",
+    "exports-loader": "0.6.4",
+    "lodash": "4.17.4",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "react-redux": "5.0.4",
+    "react-test-renderer": "15.5.4",
+    "redux": "3.6.0",
+    "webpack": "2.4.1"
   }
 }
