--- a/package.json
+++ b/package.json
@@ -7,44 +7,107 @@
   "author": "Rodrigo Gualberto <itzdrigz@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "webpack serve",
     "lint:js": "eslint src/ --ext .jsx",
     "tests": "jest"
   },
   "devDependencies": {
-    "babel-eslint": "7.2.2",
-    "css-loader": "0.28.0",
-    "eslint": "3.19.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-react": "6.10.3",
-    "jest": "19.0.2",
-    "jest-cli": "19.0.2",
-    "node-sass": "4.5.2",
-    "sass-loader": "6.0.3",
-    "style-loader": "0.16.1",
-    "webpack-dev-server": "2.4.2"
-  },
-  "dependencies": {
-    "axios": "0.16.1",
-    "babel-core": "6.24.1",
-    "babel-jest": "19.0.0",
-    "babel-loader": "6.4.1",
-    "babel-polyfill": "6.23.0",
-    "babel-preset-env": "1.4.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-1": "6.24.1",
-    "babel-register": "6.24.1",
-    "es6-promise": "4.1.0",
-    "exports-loader": "0.6.4",
-    "identity-obj-proxy": "3.0.0",
-    "lodash": "4.17.4",
-    "react": "15.5.4",
-    "react-dom": "15.5.4",
-    "react-redux": "5.0.4",
-    "react-test-renderer": "15.5.4",
-    "redux": "3.6.0",
-    "webpack": "2.4.1"
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-proposal-do-expressions": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-arrow-functions": "^7.2.0",
+    "@babel/plugin-transform-block-scoping": "^7.3.4",
+    "@babel/plugin-transform-classes": "^7.3.4",
+    "@babel/plugin-transform-computed-properties": "^7.2.0",
+    "@babel/plugin-transform-destructuring": "^7.3.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-transform-modules-umd": "^7.2.0",
+    "@babel/plugin-transform-parameters": "^7.3.3",
+    "@babel/plugin-transform-react-constant-elements": "^7.2.0",
+    "@babel/plugin-transform-react-inline-elements": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/plugin-transform-shorthand-properties": "^7.2.0",
+    "@babel/plugin-transform-spread": "^7.2.2",
+    "@babel/plugin-transform-template-literals": "^7.2.0",
+    "@babel/polyfill": "7.8.7",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@babel/runtime-corejs3": "^7.5.5",
+    "@storybook/addon-knobs": "6.0.21",
+    "@storybook/addon-toolbars": "^6.0.21",
+    "@storybook/react": "^6.0.21",
+    "autoprefixer": "^9.5.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.1.0",
+    "babel-loader": "^8.0.5",
+    "babel-minify": "^0.5.1",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-module-resolver": "4.0.0",
+    "babel-plugin-transform-imports": "^1.5.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "classname": "0.0.0",
+    "clean-webpack-plugin": "3.0.0",
+    "compression-webpack-plugin": "3.1.0",
+    "copy-webpack-plugin": "4.6.0",
+    "core-js": "^3.6.5",
+    "css-loader": "3.5.2",
+    "cssnano": "^4.1.10",
+    "es6-promise": "4.2.8",
+    "eslint": "^5.15.3",
+    "eslint-plugin-compat": "^2.0.1",
+    "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-unicorn": "^8.0.1",
+    "exports-loader": "^0.7.0",
+    "expose-loader": "^0.7.3",
+    "file-loader": "6.0.0",
+    "html-webpack-plugin": "3.2.0",
+    "html-webpack-template": "6.2.0",
+    "image-webpack-loader": "6.0.0",
+    "lodash-es": "^4.17.15",
+    "lodash-webpack-plugin": "^0.11.5",
+    "mini-css-extract-plugin": "0.9.0",
+    "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "prop-types": "15.7.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-router-dom": "5.2.0",
+    "remove-files-webpack-plugin": "1.4.0",
+    "sass-loader": "8.0.2",
+    "style-loader": "1.2.0",
+    "svg4everybody": "2.1.9",
+    "terser-webpack-plugin": "^1.2.3",
+    "webpack": "5.17.0",
+    "webpack-cli": "4.4.0",
+    "webpack-dev-server": "3.11.2",
+    "redux": "4.0.5",
+    "react-redux": "7.2.2",
+    "react-test-renderer": "17.0.1",
+    "axios": "0.21.1",
+    "jest": "26.6.3",
+    "jest-cli": "26.6.3"
   },
   "jest": {
     "collectCoverage": true,
