--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack serve",
+    "build": "webpack --env production",
     "lint:js": "eslint src/ --ext .jsx",
     "tests": "jest"
   },
@@ -56,6 +57,7 @@
     "@storybook/addon-toolbars": "^6.0.21",
     "@storybook/react": "^6.0.21",
     "autoprefixer": "^9.5.0",
+    "axios": "0.21.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
@@ -80,9 +82,11 @@
     "exports-loader": "^0.7.0",
     "expose-loader": "^0.7.3",
     "file-loader": "6.0.0",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "4.5.1",
     "html-webpack-template": "6.2.0",
     "image-webpack-loader": "6.0.0",
+    "jest": "26.6.3",
+    "jest-cli": "26.6.3",
     "lodash-es": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "0.9.0",
@@ -93,7 +97,10 @@
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
+    "react-test-renderer": "17.0.1",
+    "redux": "4.0.5",
     "remove-files-webpack-plugin": "1.4.0",
     "sass-loader": "8.0.2",
     "style-loader": "1.2.0",
@@ -101,13 +108,7 @@
     "terser-webpack-plugin": "^1.2.3",
     "webpack": "5.17.0",
     "webpack-cli": "4.4.0",
-    "webpack-dev-server": "3.11.2",
-    "redux": "4.0.5",
-    "react-redux": "7.2.2",
-    "react-test-renderer": "17.0.1",
-    "axios": "0.21.1",
-    "jest": "26.6.3",
-    "jest-cli": "26.6.3"
+    "webpack-dev-server": "3.11.2"
   },
   "jest": {
     "collectCoverage": true,
